# Clothes_shop_bot

./: .gitignore  Dockerfile  copy_env.txt  main.py  products.json  pyproject.toml  todo
bot/buttons/: inline.py  reply.py
bot/handlers/: __init__.py  start.py
bot/handlers/private/: product.py
db/: models.py
locales/en/LC_MESSAGES/: messages.po
locales/uz/LC_MESSAGES/: messages.po
